proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/try_except.py
try:
    raise TypeError
except:
    pass
finally:
    pass
